# abstract-interpretation

./: .gitignore  .gitmodules  README.md  abstract-interpretation.cabal  cabal.project  stack.yaml
src/Abs/: Store.hs  Syntax.hs  Value.hs
src/Abstract/: Boolean.hs  Configuration.hs  Environment.hs  Eval.hs  Expr.hs  GarbageCollection.hs  Interpreter.hs  Number.hs  Primitive.hs  RootSet.hs  Roots.hs  Set.hs  Store.hs  Syntax.hs  Term.hs  Type.hs  Util.hs  Value.hs
src/Abstract/Eval/: Dead.hs  Trace.hs
src/Abstract/Interpreter/: Caching.hs  Collecting.hs  Dead.hs  Symbolic.hs  Trace.hs  Tracing.hs  Typechecking.hs
src/Control/: Effect.hs
src/Control/Monad/Effect/: Amb.hs  Failure.hs
src/Data/Functor/Classes/: Pretty.hs
src/Data/Functor/Classes/Eq/: Generic.hs
src/Data/Functor/Classes/Ord/: Generic.hs
src/Data/Functor/Classes/Show/: Generic.hs
