name:                abstract-interpretation
version:             0.0.0.1
synopsis:            Experiments in abstracting definitional interpreters
description:         Experiments in abstracting definitional interpreters à la https://plum-umd.github.io/abstracting-definitional-interpreters/
homepage:            https://github.com/robrix/abstract-interpretation
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017 Rob Rix
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Abstract.Configuration
                     , Abstract.Interpreter
                     , Abstract.Interpreter.Caching
                     , Abstract.Interpreter.Dead
                     , Abstract.Interpreter.Symbolic
                     , Abstract.Interpreter.Trace
                     , Abstract.Interpreter.Typechecking
                     , Abstract.Primitive
                     , Abstract.Store
                     , Abstract.Syntax
                     , Abstract.Type
                     , Abstract.Value
                     , Control.Effect
                     , Control.Monad.Effect.Failure
  build-depends:       base >=4.10 && <4.11
                     , containers
                     , effects
                     , pointed
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , recursion-schemes
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing
