name:                abstract-interpretation
version:             0.0.0.1
synopsis:            Experiments in abstracting definitional interpreters
description:         Experiments in abstracting definitional interpreters à la https://plum-umd.github.io/abstracting-definitional-interpreters/
homepage:            https://github.com/robrix/abstract-interpretation
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017 Rob Rix
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Abstract.Configuration
                     , Abstract.Interpreter

                     , Abstract.Environment
                     , Abstract.Term
                     , Abstract.Interpreter.Caching
                     , Abstract.Interpreter.Collecting
                     , Abstract.Interpreter.Dead
                     , Abstract.Interpreter.Symbolic
                     , Abstract.Interpreter.Tracing
                     , Abstract.Primitive
                     , Abstract.Eval
                     , Abstract.Set
                     , Abstract.Store
                     , Abstract.Syntax
                     , Abstract.Type
                     , Abstract.Util
                     , Abstract.Value
                     , Control.Effect
                     , Data.Functor.Classes.Show.Generic
  build-depends:       base >=4.10 && <4.11
                     , containers
                     , effects
                     , pointed
                     , prettyprinter
                     , recursion-schemes
                     , pretty-show
                     , hscolour
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing
