name:                abstract-interpretation
version:             0.0.0.1
synopsis:            Experiments in abstracting definitional interpreters
description:         Experiments in abstracting definitional interpreters à la https://plum-umd.github.io/abstracting-definitional-interpreters/
homepage:            https://github.com/robrix/abstract-interpretation
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017 Rob Rix
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Abstract.Configuration
                     , Abstract.Environment
                     , Abstract.Eval
                     , Abstract.Interpreter
                     , Abstract.Interpreter.Caching
                     , Abstract.Interpreter.Collecting
                     , Abstract.Interpreter.Dead
                     , Abstract.Interpreter.Symbolic
                     , Abstract.Interpreter.Tracing
                     , Abstract.Primitive
                     , Abstract.Set
                     , Abstract.Store
                     , Abstract.Syntax
                     , Abstract.Term
                     , Abstract.Type
                     , Abstract.Value
                     , Control.Effect
  other-modules:       Data.Functor.Classes.Eq.Generic
                     , Data.Functor.Classes.Show.Generic
                     , Data.Functor.Classes.Ord.Generic
  build-depends:       base >=4.10 && <4.11
                     , containers
                     , effects
                     , pointed
                     , recursion-schemes
                     , pretty-show
                     , hscolour
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing
